alignment justify fixed

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -308,7 +308,7 @@ h6:before {
 
 p {
   margin-bottom: 20px;
-  text-align:justified;
+  text-align:justify;
 }
  
 a {
